--- a/style.css
+++ b/style.css
@@ -1,90 +1,103 @@
-body{
-margin: 0;
-padding: 0;
-} 
-
-section{
-    position: relative;
-    width: 100%;
-    height: 65vh;
-    background: #ffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}  
-
-section:before{
-    content: '';
-    position: absolute;
-    bottom: -240px;
-    right: 0;
-    width: 100%;
-    height:600px;
-    background: linear-gradient(45deg,#012c2d,#277a7b);
-    clip-path: polygon(100% 0,-200% 100%,100% 100%);
-}
-
-.imgntxt{
-    display: flex;
-    flex-direction: column;
-}
-
-.content{
-    position: relative; 
-     width: 400px;
-    text-align: center;
-    margin-top: 100px;
-}
-
-.content h1{
-    color: #024f50;
-    font-family:'Golos Text', sans-serif;
-    font-size: 38px ;
-}
-
-.iconimg{
-    width: 60px;
-    position: relative; 
-    right: 450px;
-    top: 75px;
-}
-
-.threedimg{
-width: 400px;
-position: relative;
-left: 30px;
-bottom: 46px;
-
-}
-    
-.content span{
-    color: #039496;
-}
-
-.divtext p{
-    color: #ffff;
-    font-family:'Golos Text', sans-serif ;
-    font-size: 10px;
-}
-
-.divtext button{
-    border: none;
-    background: none;
-    color: #ffff;
-    font-family: 'Golos Text', sans-serif;
-    font-size: 8px;
-    font-weight: bold;
-    
-}
-
-.divtext h5{
-    color: #ffff;
-    font-family: 'Golos Text', sans-serif;
-    font-size: 10px;
+*{
+    padding: 0;
     margin: 0;
 }
 
-.textcontainer{
+
+body{
+padding: 0;
+margin: 0;
+overflow: hidden;
+} 
+
+section{
+position: relative;
+width: 100%;
+height: 100%;
+background: #ffff;
+display: flex;
+justify-content: center;
+align-items: center;
+}  
+
+section:before{
+content: '';
+position: absolute;
+bottom: -240px;
+right: 0;
+width: 100%;
+height:750px;
+background: linear-gradient(45deg,#012c2d,#277a7b);
+clip-path: polygon(100% 0,-200% 100%,100% 100%);
+}
+
+.imgntxt{
+display: flex;
+flex-direction: column;
+}
+
+.content{
+position: relative; 
+width: 400px;
+text-align: center;
+margin-top: 100px;
+}
+
+.content h1{
+color: #024f50;
+font-family:'Golos Text', sans-serif;
+font-size: 38px ;
+position: relative;
+top: -100px;
+}
+
+.iconimg{
+width:80px;
+position: relative; 
+right: 450px;
+top: -80px;
+}
+
+.threedimg{
+width: 350px;
+position: relative;
+left: 50px;
+top: -100px;
+}
+
+.content span{
+color: #039496;
+}
+
+.divtext p{
+color: #ffff;
+font-family:'Golos Text', sans-serif ;
+font-size: 10px;
+}
+
+.divtext button{
+border: none;
+background: none;
+color: #ffff;
+font-family: 'Golos Text', sans-serif;
+font-size: 8px;
+font-weight: bold;
+}
+
+#more_1,#more_2 {
+display: none;
+font-size: 10px;
+color: #ffff;
+}
+
+.divtext h5{
+color: #ffff;
+font-family: 'Golos Text', sans-serif;
+font-size: 10px;
+margin: 0;
+}
+
+.textcontainer,.textcontainerII{
 width: 300px;
 height: 200px;
 text-align: start;
@@ -97,7 +110,7 @@ flex-direction: column;
 height: 130px;
 position: relative;
 right: 270px;
-bottom: 60px;
+top: -150px;
 }
 
 /* MEDIAQUERY MEDIAQUERY MEDIAQUERY */
@@ -109,7 +122,7 @@ bottom: 60px;
 .iconimg{
 position: relative;
 left: 10px;
-top: 5px ;
+top: -100px ;
 width: 100px;
 height: auto;
 }
@@ -121,14 +134,14 @@ padding: 0;
 }
 
 .content h1{
-margin-top: 0px;    
+margin-top: -30px;    
 font-size: 35px ;
 }
 
 .threedimg{
 width: 300px;
 position: relative;
-left: 30px;
+left: 80px;
 bottom: 10px;
 
 }
@@ -137,16 +150,18 @@ bottom: 10px;
 display: flex;
 flex-direction: column; 
 height: 130px;
-position: relative;
-right: 270px;
-bottom: -35px;
 align-items: center;
-justify-content: center;
-width: 1000px;
+width: 800px;
+margin-top: 40px;
+}
+
+.divtext{
+position: relative;
+right: 200px;
 }
 
 .divtext p{
-font-size: 11px;
+font-size: 10px;
 }
 
 .divtext button{
@@ -160,12 +175,12 @@ font-size: 12px;
 }
 }
 
-/* larger screen */
+/* ipad & tablet screen */
 @media only screen and (min-width: 768px) and (max-width:1024px){
 .iconimg{
 position: relative;
 left: 10px;
-top: 5px ;
+top: -70px ;
 width: 100px;
 height: auto;
 }
@@ -179,16 +194,19 @@ font-size: 38px ;
 display: flex;
 flex-direction: column; 
 height: 130px;
-position: relative;
-right: 270px;
-bottom: -35px;
 align-items: center;
 justify-content: center;
 width: 1000px;
 }
 
+.divtext{
+position: relative;
+right: 270px;
+top: 20px;
+}
+
 .divtext p{
-font-size: 14px;
+font-size: 10px;
 }
 
 .divtext button{
@@ -199,6 +217,11 @@ font-weight: bold;
 
 .divtext h5{
 font-size: 14px;
+}
+
+.textcontainerII{
+margin-top:5px ;
+
 }
 
 }
